--- a/src/container/bio.hbs
+++ b/src/container/bio.hbs
@@ -1,33 +1,31 @@
 <div>
     <main>
-        <div>
-            <h1>{{name}}</h1>
-        </div>
-        <br />
-        <div>
+        <h1 class="mb-3">{{name}}</h1>
+
+        <p>
             Birth Date: <date>{{birthdate}}</date>
-        </div>
-        <br />
-        <div>
-            <address>Birth Place: {{birthplace}}</address>
-        </div>
-        <br />
-        <div>
+        </p>
+
+        <p>
+        <address>Birth Place: {{birthplace}}</address>
+        </p>
+
+        <p>
             Death Date: <date>{{deathdate}}</date>
-        </div>
-        <br />
-        <div>
-            <address>Death Place: {{deathplace}}</address>
-        </div>
-        <br />
-        <div>Nationality: {{nationality}}</div>
-        <br />
-        <div>Occupation: {{occupation}}</div>
-        <br />
+        </p>
+
+        <p>
+        <address>Death Place: {{deathplace}}</address>
+        </p>
+
+        <p>Nationality: {{nationality}}</p>
+
+        <p>Occupation: {{occupation}}</p>
+
         <hr />
         <section>
             <div>
-                <div>
+                <div class="mb-3">
                     <b>Known for:</b>
                     <ul>
                         {{#each known_for}}
@@ -35,8 +33,8 @@
                         {{/each}}
                     </ul>
                 </div>
-                <br>
-                <div>
+
+                <div class="mb-3">
                     <b>Notable publications:</b>
                     <ul>
                         {{#each notable_publications}}
@@ -48,8 +46,8 @@
                         {{/each}}
                     </ul>
                 </div>
-                <br>
-                <div>
+
+                <div class="mb-3">
                     <b>Partners:</b>
                     <ul>
                         {{#each partners}}
@@ -61,8 +59,8 @@
                         {{/each}}
                     </ul>
                 </div>
-                <br>
-                <div>
+
+                <div class="mb-3">
                     <b>Awards:</b>
                     <ul>
                         {{#each awards}}
@@ -74,8 +72,8 @@
                         {{/each}}
                     </ul>
                 </div>
-                <br>
-                <div>
+
+                <div class="mb-3">
                     <b>Influences:</b>
                     <ul>
                         {{#each influences}}
@@ -85,8 +83,8 @@
                         {{/each}}
                     </ul>
                 </div>
-                <br>
-                <div>
+
+                <div class="mb-3">
                     <b>Influenced:</b>
                     <ul>
                         {{#each influenced}}
@@ -96,8 +94,8 @@
                         {{/each}}
                     </ul>
                 </div>
-                <br>
-                <div>
+
+                <div class="mb-3">
                     <b>Quotes:</b>
                     <ul>
                         {{#each quotes}}
@@ -107,8 +105,8 @@
                         {{/each}}
                     </ul>
                 </div>
-                <br>
-                <div>
+
+                <div class="mb-3">
                     <b>Major discoveries:</b>
                     <ul>
                         {{#each major_discoveries}}
@@ -120,8 +118,8 @@
                         {{/each}}
                     </ul>
                 </div>
-                <br>
-                <div>
+
+                <div class="mb-3">
                     <b>Contributions:</b>
                     <ul>
                         {{#with contributions}}
@@ -134,7 +132,7 @@
                         {{/with}}
                     </ul>
                 </div>
-                <br>
+
             </div>
         </section>
     </main>
